Fixed the issue. All buttons that have an icon need to have their content wrapped with a span

--- a/app/assets/stylesheets/application/core.sass
+++ b/app/assets/stylesheets/application/core.sass
@@ -166,6 +166,21 @@ button,
   text-decoration: none
   +transition(box-shadow .2s linear)
   
+  span
+    display: block
+    margin: 0 -15px
+    padding: 0 15px 0 40px
+    position: relative
+    
+    &:before
+      background: image-url('application/icons.png') no-repeat
+      content: ''
+      height: 30px
+      left: 0
+      position: absolute
+      top: 0
+      width: 30px
+  
 #body
 
   label
